--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,14 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <dependencies>
+        <!-- Google GSON -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
+    </dependencies>
+
 </project>
