--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,24 @@
     <artifactId>ecm</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <javaee.version>7.0</javaee.version>
+        <gson.version>2.8.0</gson.version>
+    </properties>
 
     <dependencies>
+        <!-- JavaEE API -->
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>${javaee.version}</version>
+        </dependency>
+
         <!-- Google GSON -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.0</version>
+            <version>${gson.version}</version>
         </dependency>
 
     </dependencies>
