--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
             <version>${hibernate.version}</version>
         </dependency>
 
+        <!-- DOJO -->
+        <!--<dependency>-->
+            <!--<groupId>org.webjars</groupId>-->
+            <!--<artifactId>dojo</artifactId>-->
+            <!--<version>1.10.4-1</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 
