--- a/pom.xml
+++ b/pom.xml
@@ -59,12 +59,26 @@
             <version>${hibernate.version}</version>
         </dependency>
 
-        <!-- DOJO -->
+
+        <!--<dependency>-->
+            <!--<groupId>org.webjars</groupId>-->
+            <!--<artifactId>gridx</artifactId>-->
+            <!--<version>1.3.9</version>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.webjars/webjars-servlet-2.x &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.webjars</groupId>-->
+            <!--<artifactId>webjars-servlet-2.x</artifactId>-->
+            <!--<version>1.0</version>-->
+        <!--</dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.webjars/dojo -->
         <!--<dependency>-->
             <!--<groupId>org.webjars</groupId>-->
             <!--<artifactId>dojo</artifactId>-->
-            <!--<version>1.10.4-1</version>-->
+            <!--<version>1.10.0</version>-->
         <!--</dependency>-->
+
 
     </dependencies>
 
