--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <gson.version>2.8.0</gson.version>
         <derby.version>10.11.1.1</derby.version>
         <hibernate.version>5.2.5.Final</hibernate.version>
+        <multipart.version>2.25</multipart.version>
     </properties>
 
     <build>
@@ -60,10 +61,24 @@
         </dependency>
 
 
-        <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-multipart -->
+        <!-- For handling multipart form data -->
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-multipart</artifactId>
+            <version>${multipart.version}</version>
+        </dependency>
+
+        <!-- To avoid bug WELD-001408 Unsatisfied dependencies for type [Providers] with qualifiers [@Default] at injection point -->
+        <dependency>
+            <groupId>org.glassfish.jersey.containers.glassfish</groupId>
+            <artifactId>jersey-gf-cdi</artifactId>
+            <version>2.14</version>
+        </dependency>
+
+        <!-- To avoid bug WELD-001408 Unsatisfied dependencies for type [Providers] with qualifiers [@Default] at injection point -->
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet-core</artifactId>
             <version>2.25</version>
         </dependency>
 
