--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <scope>provided</scope>
+            <version>1.0</version>
+        </dependency>
+
         <!-- JavaEE API -->
         <dependency>
             <groupId>javax</groupId>
@@ -81,6 +88,9 @@
             <artifactId>jersey-container-servlet-core</artifactId>
             <version>2.25</version>
         </dependency>
+
+
+
 
         <!--<dependency>-->
             <!--<groupId>org.glassfish.jersey.media</groupId>-->
