--- a/pom.xml
+++ b/pom.xml
@@ -89,34 +89,7 @@
             <version>2.25</version>
         </dependency>
 
-
-        <!--<dependency>-->
-            <!--<groupId>org.glassfish.jersey.media</groupId>-->
-            <!--<artifactId>jersey-media-multipart</artifactId>-->
-            <!--<version>2.25.1</version>-->
-        <!--</dependency>-->
-         <!--&lt;!&ndash;https://mvnrepository.com/artifact/com.sun.jersey.contribs/jersey-multipart&ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>com.sun.jersey.contribs</groupId>-->
-            <!--<artifactId>jersey-multipart</artifactId>-->
-            <!--<version>1.19</version>-->
-        <!--</dependency>-->
-
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-multipart-provider &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.jboss.resteasy</groupId>-->
-            <!--<artifactId>resteasy-multipart-provider</artifactId>-->
-            <!--<version>3.1.0.Final</version>-->
-        <!--</dependency>-->
-
-
-
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-multipart &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.glassfish.jersey.media</groupId>-->
-            <!--<artifactId>jersey-media-multipart</artifactId>-->
-            <!--<version>2.25</version>-->
-        <!--</dependency>-->
+        <!--Too long deploy with webjars-->
 
         <!--<dependency>-->
             <!--<groupId>org.webjars</groupId>-->
