--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
             <artifactId>jersey-container-servlet-core</artifactId>
             <version>2.25</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.13</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.jboss.weld</groupId>-->
             <!--<artifactId>weld-osgi-bundle</artifactId>-->
